@@ -1,3 +1,7 @@
+2010-06-03  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14397: htmlArea RTE: Incorrect encoding of some labels when BE is not utf-8
+
 2010-05-27  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #14489: htmlArea RTE: color dialogues do not show all configured colors
