@@ -1,3 +1,7 @@
+2010-06-03  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14397: htmlArea RTE: Incorrect encoding of some labels when BE is not utf-8
+
 2010-06-03  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Fixed bug #14130: Switching pages with browsebox doesn't work (thanks to Mark Kuiphuis)
